--- a/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
@@ -32,9 +32,14 @@
                     </div>
                 </div>
                 <div class="col-9">
-                        <button type="button" id="action_contract">Xác nhận</button>
+                    <button type="button" id="action_contract">Xác nhận</button>
                 </div>
             </div>
+        </div>
+
+        <div style="margin-bottom:15px;">
+            <a href="https://localhost:44362/Admin/Contracts/Create" class="btn btn-info" role="button">Create Contracts</a>
+            <a href="https://localhost:44362/Admin/Contracts/Deleted" class="btn btn-info float-right" role="button">Contracts Deleted</a>
         </div>
 
         <!-- DataTales Example -->
@@ -75,7 +80,7 @@
                                                 <td class="sorting_1">
                                                     @item.Insurance.Name
                                                 </td>
-                                                <td>@item.CustomerId</td>
+                                                <td>@item.ApplicationUserId</td>
                                                 <td>@item.TotalPrice</td>
                                                 <td>@item.CreatedAt</td>
                                                 <td>@item.UpdatedAt</td>
@@ -138,7 +143,7 @@
             if (selectedIDs.length <= 0) {
                 alert('You have not selected a contract!');
                 return;
-                }
+            }
             $.ajax({
                 url: "/Admin/Contracts/StatusOrder",
                 type: "POST",
@@ -152,11 +157,11 @@
                     if (!res == false) {
                         window.location.href = `/Admin/Contracts`;
                     }
-                    },
-                    error: function () {
-                        alert('error');
-                    }
-                });
-            })
+                },
+                error: function () {
+                    alert('error');
+                }
+            });
+        })
     </script>
 }
