--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Deleted.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Deleted.cshtml
@@ -1,9 +1,9 @@
 ﻿@model IEnumerable<Project_sem_3.Models.InsurancePackage>
-
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Deleted";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
 
 <!-- Custom styles for this page -->
 <link href="/Assets/admin/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
@@ -14,13 +14,14 @@
     <div class="container-fluid">
 
         <!-- Page Heading -->
-        <h1 class="h3 mb-2 text-gray-800">Insurance Package</h1>
-        <p class="mb-4"> All contracts of customers about insurances .</p>
-        <button type="button" id="delete_checked">Delete Selected</button>
+        <h1 class="h3 mb-2 text-gray-800">Insurance Packages Deleted</h1>
+        @*<p class="mb-4"> All contracts of customers about insurances .</p>*@
+        @*<button type="button" id="delete_checked">Delete Selected</button>*@
         <div style="margin-bottom:15px;">
             <a href="https://localhost:44362/Admin/InsurancePackages/Create" class="btn btn-info" role="button">Create Insurance Packages</a>
-            <a href="https://localhost:44362/Admin/InsurancePackages/Deleted" class="btn btn-info float-right" role="button">Insurance Packages Deleted</a>
+            @*<a href="https://localhost:44362/Admin/InsurancePackages/Action" class="btn btn-info float-right" role="button">Insurance Packages Active</a>*@
         </div>
+
 
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
@@ -39,13 +40,14 @@
                                         <tr>
                                             <th rowspan="1" colspan="1"><input type="checkbox" id="checkAll_InsurancePackage" />Select All</th>
                                             <th rowspan="1" colspan="1">Insurance Name</th>
-                                            <th rowspan="1" colspan="1">Name</th>
-                                            <th rowspan="1" colspan="1">Description</th>
+                                            @*<th rowspan="1" colspan="1">Name</th>
+                                                <th rowspan="1" colspan="1">Description</th>*@
                                             <th rowspan="1" colspan="1">Price</th>
-                                            <th rowspan="1" colspan="1">DurationContract</th>
-                                            <th rowspan="1" colspan="1">DurationPay</th>
+                                            @*<th rowspan="1" colspan="1">DurationContract</th>
+                                                <th rowspan="1" colspan="1">DurationPay</th>*@
                                             <th rowspan="1" colspan="1">CreatedAt</th>
-                                            <th rowspan="1" colspan="1">UpdatedAt</th>
+                                            @*<th rowspan="1" colspan="1">UpdatedAt</th>*@
+                                            <th rowspan="1" colspan="1">Status</th>
                                             <th rowspan="1" colspan="1">Action</th>
                                         </tr>
 
@@ -63,13 +65,13 @@
                                                 <td class="sorting_1">
                                                     @item.Insurance.Name
                                                 </td>
-                                                <td>@item.Name</td>
-                                                <td>@item.Description</td>
+                                                @*<td>@item.Name</td>*@
+                                                @*<td>@item.Description</td>*@
                                                 <td>@item.Price</td>
-                                                <td>@item.DurationContract</td>
-                                                <td>@item.DurationPay</td>
+                                                @*<td>@item.DurationContract</td>
+                                                    <td>@item.DurationPay</td>*@
                                                 <td>@item.CreatedAt</td>
-                                                <td>@item.UpdatedAt</td>
+                                                <td>@item.Status</td>
                                                 <td>
                                                     <span>
                                                         <button>@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
@@ -84,7 +86,7 @@
                                 </table>
                             </div>
                         </div>
-                        <div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="dataTable_previous"><a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next"><a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div></div></div>
+                        <div class="row"><div class="col-sm-12 col-md-5"><div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite"></div></div><div class="col-sm-12 col-md-7"><div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="dataTable_previous"><a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="4" tabindex="0" class="page-link">4</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="5" tabindex="0" class="page-link">5</a></li><li class="paginate_button page-item "><a href="#" aria-controls="dataTable" data-dt-idx="6" tabindex="0" class="page-link">6</a></li><li class="paginate_button page-item next" id="dataTable_next"><a href="#" aria-controls="dataTable" data-dt-idx="7" tabindex="0" class="page-link">Next</a></li></ul></div></div></div>
                     </div>
                 </div>
             </div>
@@ -104,29 +106,29 @@
                     $(this).prop('checked'));
             })
 
-        $('#delete_checked').click(function () {
-            var selectedIDs = new Array();
-            $('input:checkbox.check').each(function () {
-                if ($(this).prop('checked')) {
-                    selectedIDs.push($(this).val());
-                }
-            });
-            if (selectedIDs.length <= 0) {
-                alert('You have not selected insurance package !');
-                return;
-                }
-            $.ajax({
-                url: "/Admin/InsurancePackages/DeleteAll",
-                type: "POST",
-                dataType: "json",
-                data: {
-                    __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
-                    selectedIDs
-                },
-                success: function (res) {
-                    if (!res == false) {
-                        window.location.href = `/Admin/InsurancePackages`;
+            $('#delete_checked').click(function () {
+                var selectedIDs = new Array();
+                $('input:checkbox.check').each(function () {
+                    if ($(this).prop('checked')) {
+                        selectedIDs.push($(this).val());
                     }
+                });
+                if (selectedIDs.length <= 0) {
+                    alert('You have not selected insurance package !');
+                    return;
+                }
+                $.ajax({
+                    url: "/Admin/InsurancePackages/DeleteAll",
+                    type: "POST",
+                    dataType: "json",
+                    data: {
+                        __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
+                        selectedIDs
+                    },
+                    success: function (res) {
+                        if (!res == false) {
+                            window.location.href = `/Admin/InsurancePackages`;
+                        }
                     },
                     error: function () {
                         alert('error');
@@ -136,4 +138,3 @@
         })
     </script>
 }
-
