--- a/Project_sem_3/Views/Account/Login.cshtml
+++ b/Project_sem_3/Views/Account/Login.cshtml
@@ -1,11 +1,8 @@
 ﻿@using Project_sem_3.Models
 @model LoginViewModel
-@{
-    ViewBag.Title = "Log in";
-}
 
-<h2>@ViewBag.Title.</h2>
-<div class="row">
+
+@*<div class="row">
     <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -48,16 +45,19 @@
             <p>
                 @Html.ActionLink("Forgot your password?", "ForgotPassword")
             </p>*@
-            }
-        </section>
-    </div>
-    <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
-    </div>
-</div>
+            
+@*</section>
+        </div>
+        <div class="col-md-4">
+            <section id="socialLoginForm">
+                @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+            </section>
+        </div>
+    </div>*@
 
-@*@section Scripts {
+
+
+
+@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}*@
+}    
