--- a/Project_sem_3/Views/Shared/_Layout.cshtml
+++ b/Project_sem_3/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@
     <style>
         .no-bullet li {
             margin-bottom: 6px
+            
+        }
+        .menu-item{
+            margin:0
         }
     </style>
 </head>
@@ -59,7 +63,6 @@
             <div class="bottom-header">
                 <div class="container" style="height: 56px;">
                     <div class="main-navigation" style="font-size:20px;    margin-top: 10px;">
-                        <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
                         <ul class="menu">
                             @*<li class="menu-item"><a href="about.html">About us</a></li>
                                 <li class="menu-item"><a href="insurance.html">Insurance plans</a></li>
