--- a/Project_sem_3/Views/MedicalInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MedicalInsurance/Order.cshtml
@@ -4,18 +4,24 @@
 }
 
 <section>
-    <div class="subslide shadow">
-        <div class="thumb" style="        background-image: url(https://cdn.vietnambiz.vn/2019/9/4/jan-31-is-next-deadline-to-enroll-for-obamacare787x524-15675953121511744257074.jpg)"></div>
+    <div class="banner">
+
     </div>
+
 </section>
-<div class="container">
+@*<section>
+    <div class="subslide shadow">
+        <div class="thumb" style="background-image: url(https://humanhealth.com.hk/en/service/detail/32/upload/service/32/self/5c108ff960152.jpg)"></div>
+    </div>
+</section>*@
+@*<div class="container">
     <ul class="tab-pro">
         <li class="nav-item "><a href="#">Information</a></li>
         <li class="nav-item active"><a href="#">Order</a></li>
         <li class="nav-item "><a href="#">Log in</a></li>
         <li class="nav-item "><a href="#">Delivery & payment</a></li>
     </ul>
-</div>
+</div>*@
 <section class="main-content">
     <div class="container">
         <div class="row">
@@ -312,13 +318,13 @@
     }
 
     .hd-info-pro {
-        background-color: #0b665a;
+        background-color: #0f75bd;
         color: #fff;
         font-family: inherit;
         text-transform: uppercase;
         font-size: 15px;
         padding: 15px;
-        border-bottom: solid 1px #fff;
+        border-bottom: solid 1px #ddd;
         font-weight: bold;
     }
 
@@ -341,7 +347,7 @@
 
     .table-donhang thead th {
         border-bottom-width: 1px;
-        background-color: #0b665a;
+        background-color: #0f75bd;
         font-size: 14px;
         color: #fff;
     }
@@ -440,7 +446,7 @@
     .btn-pro-buynow {
         display: block;
         width: 100%;
-        background-color: #0b665a;
+        background-color: #0f75bd;
         padding: 11px;
         padding-bottom: 14px;
         padding-left: 0px;
@@ -458,6 +464,13 @@
             background-color: #ea212d;
             color: #fff;
         }
+
+          .banner {
+        width: 100%;
+        height: 600px;
+        background-image: url(https://api.visitjeju.net/editorStore/file/201911/28/3c6fb3fc-4b5c-4fd7-b924-10d45da3e22b.jpg);
+        background-position: center center;
+        background-size: cover;
 
     input {
         max-width: 100%;
