--- a/Project_sem_3/Views/MotorInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MotorInsurance/Order.cshtml
@@ -290,7 +290,7 @@
     }
 
     .hd-info-pro {
-        background-color: #0b665a;
+        background-color: #337ab7;
         color: #fff;
         font-family: inherit;
         text-transform: uppercase;
@@ -382,7 +382,7 @@
     .btn-pro-buynow {
         display: block;
         width: 100%;
-        background-color: #0b665a;
+        background-color: #0f75bd;
         padding: 11px;
         padding-bottom: 14px;
         padding-left: 0px;
@@ -399,7 +399,7 @@
     .banner {
   width: 100%;
   height: 600px;
-  background-image: url(https://www.bennetts.co.uk/-/media/default-website/bike-insurance/motorbike-insurance/whats-included/bennetts-ultimate-cover-banner.ashx?h=360&w=780&la=en&hash=93DA48B7B1A1A5A492766AF4D77DC194FF258290);
+  background-image: url(https://www.masseyins.com/wp-content/uploads/2019/03/Motorcycle-miniature-model-figure-on-passport-1024x682.jpeg);
   background-position: center center;
   background-size: cover;
 }
