chua hoan thien

--- a/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
@@ -75,7 +75,7 @@
                                                 <td class="sorting_1">
                                                     @item.Insurance.Name
                                                 </td>
-                                                <td>@item.CustomerId</td>
+                                                @*<td>@item.CustomerId</td>*@       
                                                 <td>@item.TotalPrice</td>
                                                 <td>@item.CreatedAt</td>
                                                 <td>@item.UpdatedAt</td>
